fix: solve footer overflow on mobile

--- a/style.css
+++ b/style.css
@@ -195,9 +195,8 @@ p,
 .social-links {
   display: flex;
   justify-content: center;
-  gap: 30px;
-  margin-top: 15px;
-  margin-bottom: 40px;
+  flex-wrap: wrap;
+  gap: 15px;
 }
 
 .social-links a {
